--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vik-chart",
-  "version": "0.0.1",
+  "version": "0.0.22",
   "description": "Complex interactive chart(graph) Library",
   "main": "lib/index.js",
   "scripts": {
@@ -9,8 +9,8 @@
     "lint": "eslint ./src --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@antv/g2": "^4.0.14",
-    "@antv/g6": "^3.6.0",
+    "@antv/g2": "4.0.15",
+    "@antv/g6": "3.7.0",
     "react": "^16.8.6"
   },
   "devDependencies": {
